interview, leetcode and clean